<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_teaching_studio"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_teaching_studio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ai_tutor"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/ai_tutor_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_narrative_language"
        android:title="@string/embed_tts_language_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_language"
        android:title="@string/language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_listen"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/listen"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/export_full_guide"
        app:showAsAction="ifRoom" />
</menu>
